src/test_comprehensive_fix.log
  File "/workspace/PhysicsNeMo/examples/cfd/external_aerodynamics/domino/src/test_enhanced.py", line 696
    else:
    ^^^^
SyntaxError: invalid syntax
